# general_scp

./: .gitignore  .gitmodules  Cargo.toml  config.toml  test_private.pem  test_public.pem  test_signature.der
src/: lib.rs  main.rs
src/application/: app_config.rs  application.rs  clock.rs  command.rs  command_line.rs  config.rs  mod.rs  quorum.rs  quorum_manager.rs  work_queue.rs
src/ca/: README.md  arg.rs  builder.rs  ca_type.rs  cell.rs  crypto.rs  data.rs  local_state.rs  merkle.rs  mod.rs  operation.rs  root.rs  state.rs  table.rs
src/crypto/: types.rs
src/docs/: recv_scp_message.md
src/herder/: herder.rs  mod.rs  pending_envelope_manager.rs  pending_envelopes.rs  pending_envelopes_fetching.rs  pending_envelopes_no_fetching.rs
src/mock/: README.md  builder.rs  herder.rs  mod.rs  peer.rs  scp_driver.rs  state.rs
src/overlay/: conn.rs  in_memory_conn.rs  in_memory_global.rs  in_memory_peer.rs  loopback_peer.rs  message.rs  mod.rs  node.rs  outgate.rs  overlay_manager.rs  peer.rs  peer_manager.rs  peer_node.rs  rpc_gateway.rs  rpc_gateway_test.rs
src/overlay_impl/: in_memory_conn.rs  in_memory_global.rs  in_memory_peer.rs  mod.rs  tcp_conn.rs  tcp_peer.rs
src/rpc/: args.rs
src/scp/: ballot_protocol.rs  builder.rs  envelope.rs  local_node.rs  local_node_builder.rs  mod.rs  nomination_protocol.rs  queue.rs  scp.rs  scp_driver.rs  scp_driver_builder.rs  scp_state_builder.rs  slot.rs  statement.rs
src/server/: tcp_server.rs
src/test_data/node_info/test/: node1  node2
src/test_data/quorum_node/: node1  node2
src/utils/: config.rs  handle.rs  hash.rs  mod.rs  test.rs  weak_self.rs
weak_self_derive/: Cargo.toml
weak_self_derive/src/: lib.rs
