[package]
name = "general_scp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
syn = "2.0.39"
quote = "1.0"

clap = { version = "4.4.7", features = ["derive"] }
log = "0.4.20"
serde = {version = "1.0.190", features = ["derive"]}
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.5"
paste = "1.0.14"
sha2 = "0.10"
typenum = "1.17.0"
ct-merkle = "0.1.0"