[package]
name = "general_scp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
syn = "2.0.39"
quote = "1.0"

clap = { version = "4.4.7", features = ["derive"] }
log = "0.4.20"
serde = {version = "1.0.190", features = ["derive"]}
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.5"
paste = "1.0.14"
sha2 = "0.10"
typenum = "1.17.0"
ct-merkle = { path = './ct-merkle' }
dsa = "0.6.2"
pkcs8 = {version = "0.10.2", features = ["pem"]}
sha1 = "0.10.6"
digest = "0.10.7"
signature = "2.2.0"
rand = "0.8.5"
serde_json = "1.0.108"
serde_bytes = "0.11.13"
bincode = "1.3.3"
ecdsa = "0.16.9"
rand_core = "0.6.4"
blake2 = "0.10.6"
hex-literal = "0.4.1"
serde_derive = "1.0.193"
backtrace = "0.3.74"
env_logger = "0.11.5"
itertools = "0.13.0"
